# osqp-python

./: .gitignore  .pre-commit-config.yaml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ext.sln  ext_builtin.vcxproj  ext_builtin.vcxproj.filters  run_with_probname.bat
.github/workflows/: build_cuda.yml  build_cuda_windows.yml  build_default.yml  build_mkl.yml  build_mkl_windows.yml  build_wasm.yml
benchmarks/: maros_meszaros_benchmarks.py
examples/: LDL_Factorization_Issue_Replication.py  gdb_bt.txt  maros_meszaros_benchmarks.py  maros_meszaros_benchmarks_copy.py  optuna_study.db  optuna_study_della.db
src/: bindings.cpp  bindings.cpp.in
src/osqp/: interface.py
src/osqp/tests/: conftest.py  warm_start_test.py
